<resources>
    <string name="app_name">Chit Chat</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="signUp">Sign Up</string>
    <string name="messagePlacement">This is a message</string>
    <string name="inputMessage">Type your message here</string>
    <string name="sendBtnDescription">Send Button</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>