<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_height="250dp"
        android:layout_width="350dp"
        android:src="@drawable/chitchat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/logo"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/app_logo"
        android:layout_marginTop="30dp"
        android:hint="@string/username"
        android:paddingLeft="15dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_email"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:paddingLeft="15dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:autofillHints=""/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password"
        android:text="@string/login"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:text="@string/signUp"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>